[package]
name = "blockless_rust_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebAssembly support and serialization
wasmtime = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"




# For parallel processing and async support
tokio = { version = "1", features = ["full"] }  # Add Tokio for async tasks
async-std = "1.10"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }



getrandom = { version = "0.2", features = ["js"] }

