[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A simple Task Manager dApp using Blockless Rust SDK"
license = "MIT"

[dependencies]
blockless_rust_sdk = { git = "https://github.com/arjunkotgire/blockless_rust_sdk" }

clap = { version = "4.1.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
getrandom = { version = "0.2", features = ["js"] }




[features]
default = []
